# micro-news-aggregator

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: demo-checklist.md  use-cases.md  vision.md
infra/kafka/: topics.sh
infra/mongo/: init-replica.js
infra/nginx/: nginx.conf
services/api-gateway/: pyproject.toml
services/api-gateway/app/: config.py  main.py
services/api-gateway/tests/: test_proxy.py
services/auth-service/: pyproject.toml
services/auth-service/app/: config.py  main.py
services/auth-service/app/db/: postgres.py  redis.py
services/auth-service/app/models/: user.py
services/auth-service/app/routes/: auth.py
services/auth-service/app/schemas/: auth.py
services/auth-service/app/services/: jwt.py  password.py
services/auth-service/tests/: test_auth.py
services/feed-service/: Dockerfile  pyproject.toml
services/feed-service/app/: config.py  main.py
services/ingestion-service/: Dockerfile  pyproject.toml
services/ingestion-service/app/: config.py  main.py  sources.py
services/ingestion-service/app/db/: mongo.py
services/ingestion-service/app/fetcher/: rss.py
services/ingestion-service/app/parser/: feed.py
services/ingestion-service/app/producer/: kafka.py
services/ingestion-service/app/routes/: __init__.py  admin.py
services/ingestion-service/app/schemas/: __init__.py  source.py
services/ingestion-service/tests/: test_main.py  test_parser.py  test_producer.py
services/llm-service/: pyproject.toml
services/processing-service/: Dockerfile  pyproject.toml
(+31 files in other folders)
