[project]
name = "auth-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "redis[hiredis]",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "pydantic[email]",
    "pydantic-settings",
]
