[project]
name = "auth-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "redis[hiredis]",
    "bcrypt>=4.1,<5",
    "python-jose[cryptography]",
    "pydantic[email]",
    "pydantic-settings",
]

[tool.pytest.ini_options]
addopts = "--capture=no"
testpaths = ["tests"]
pythonpath = ["."]
